--- a/src/docs/doc.mdx
+++ b/src/docs/doc.mdx
@@ -6,6 +6,7 @@ import { Playground, PropsTable } from 'docz';
 import Carousel from '../react-elastic-carousel';
 
 # Carousel
+```import Carousel from 'react-elastic-carousel';```
 
 ## Basic usage
 
