fixed button width height

--- a/src/docs/doc.mdx
+++ b/src/docs/doc.mdx
@@ -16,6 +16,10 @@ import Carousel from '../react-elastic-carousel';
     <div>2</div>
     <div>3</div>
     <div>4</div>
+    <div>5</div>
+    <div>6</div>
+    <div>7</div>
+    <div>8</div>
   </Carousel>
 </Playground>
 
