docz styling and index customizations

--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -9,12 +9,20 @@ import Carousel from '../react-elastic-carousel';
 import Item from './components/ItemContainer';
 import items from './components/itemsCollection';
 
+## install
+```
+npm install react-elastic-carousel
+```
 
-# Import
-```import Carousel from 'react-elastic-carousel';```
+## Import
+```
+import Carousel from 'react-elastic-carousel'
+```
+
+## play 
 
 <Playground >
-  <Carousel>
+  <Carousel itemsToShow={3}>
     {items(12).map(item => <Item key={item.id} {...item}/>)}
   </Carousel>
 </Playground>
