--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -1,11 +1,10 @@
 ---
 name: Getting started
 route: /
-order: 1
 ---
 
 import {Playground, PropsTable } from 'docz';
-import Carousel from '../react-elastic-carousel';
+import Carousel from 'react-elastic-carousel';
 import Item from './components/ItemContainer';
 import items from './components/itemsCollection';
 
