--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -6,7 +6,7 @@ route: /
 
 import {Playground, PropsTable } from 'docz';
 import Carousel from 'react-elastic-carousel';
-import Item from './components/SimpleITem';
+import Item from './components/SimpleItem';
 import items from './components/itemsCollection';
 
 ## install
