--- a/src/docs/mdx/itemPosition.mdx
+++ b/src/docs/mdx/itemPosition.mdx
@@ -7,8 +7,7 @@ menu: Examples
 
 import {Playground, PropsTable } from 'docz';
 import Carousel, {consts} from 'react-elastic-carousel';
-import Item from '../../components/SimpleItem';
-import items from '../../components/itemsCollection';
+import Item from '../components/SimpleItem';
 
 - You should import the `consts` object to pass the desired `itemPosition`
 
