--- a/src/docs/mdx/index.mdx
+++ b/src/docs/mdx/index.mdx
@@ -6,8 +6,7 @@ route: /
 
 import {Playground, PropsTable } from 'docz';
 import Carousel from 'react-elastic-carousel';
-import Item from './components/SimpleItem';
-import items from './components/itemsCollection';
+import Item from '../components/SimpleItem';
 
 ## install
 ```
