--- a/src/docs/mdx/itemsToShow.mdx
+++ b/src/docs/mdx/itemsToShow.mdx
@@ -7,11 +7,15 @@ menu: Examples
 
 import {Playground, PropsTable } from 'docz';
 import Carousel from 'react-elastic-carousel';
-import Item from '../../components/ItemContainer';
-import items from '../../components/itemsCollection';
+import Item from '../components/SimpleItem';
 
 <Playground >
     <Carousel itemsToShow={2}>
-        {items(12).map(item => <Item key={item.id} {...item}/>)}
+        <Item>1</Item>
+        <Item>2</Item>
+        <Item>3</Item>
+        <Item>4</Item>
+        <Item>5</Item>
+        <Item>6</Item>
     </Carousel>
 </Playground>
