--- a/src/docs/mdx/initialFirstItem.mdx
+++ b/src/docs/mdx/initialFirstItem.mdx
@@ -9,8 +9,10 @@ import {Playground, PropsTable } from 'docz';
 import Carousel from 'react-elastic-carousel';
 import Item from '../components/SimpleItem';
 
+- Initial first active item
+
 <Playground >
-    <Carousel initialFirstItem={5} itemsToShow={3}>
+    <Carousel initialFirstItem={2}>
         <Item>1</Item>
         <Item>2</Item>
         <Item>3</Item>
