--- a/src/docs/mdx/itemPadding.mdx
+++ b/src/docs/mdx/itemPadding.mdx
@@ -9,6 +9,8 @@ import {Playground, PropsTable } from 'docz';
 import Carousel from 'react-elastic-carousel';
 import Item from '../components/SimpleItem';
 
+- Set padding to the wrapping element of each item
+
 <Playground>
     <Carousel itemPadding={[10, 50]} itemsToShow={3}>
         <Item>1</Item>
