--- a/src/docs/mdx/itemsToScroll.mdx
+++ b/src/docs/mdx/itemsToScroll.mdx
@@ -9,8 +9,10 @@ import {Playground, PropsTable } from 'docz';
 import Carousel from 'react-elastic-carousel';
 import Item from '../components/SimpleItem';
 
+- Number of items to scroll
+
 <Playground >
-    <Carousel itemsToScroll={3} itemsToShow={3}>
+    <Carousel itemsToScroll={2} itemsToShow={2}>
         <Item>1</Item>
         <Item>2</Item>
         <Item>3</Item>
