--- a/src/docs/mdx/easing.mdx
+++ b/src/docs/mdx/easing.mdx
@@ -9,12 +9,13 @@ import {Playground, PropsTable } from 'docz';
 import Carousel from 'react-elastic-carousel';
 import Item from '../components/SimpleItem';
 
+- You can pass an easing pattern for the animations
+
 <Playground >
     <Carousel 
         easing="cubic-bezier(1,.15,.55,1.54)"
         tiltEasing="cubic-bezier(0.110, 1, 1.000, 0.210)"
         transitionMs={700}
-        itemsToShow={3}
     >
         <Item>1</Item>
         <Item>2</Item>
