--- a/src/docs/mdx/enableAutoPlay.mdx
+++ b/src/docs/mdx/enableAutoPlay.mdx
@@ -9,8 +9,10 @@ import {Playground, PropsTable } from 'docz';
 import Carousel from 'react-elastic-carousel';
 import Item from '../components/SimpleItem';
 
+- Toggle `enableAutoPlay` and set `autoPlaySpeed` as you wish
+
 <Playground >
-    <Carousel enableAutoPlay autoPlaySpeed={1500} itemsToShow={3}>
+    <Carousel enableAutoPlay autoPlaySpeed={1500}>
         <Item>1</Item>
         <Item>2</Item>
         <Item>3</Item>
