--- a/src/docs/mdx/easing.mdx
+++ b/src/docs/mdx/easing.mdx
@@ -9,7 +9,9 @@ import {Playground, PropsTable } from 'docz';
 import Carousel from 'react-elastic-carousel';
 import Item from '../components/SimpleItem';
 
-- You can pass an easing pattern for the animations
+# easing
+
+#### You can pass an easing pattern for the animations
 
 <Playground >
     <Carousel 
