--- a/src/docs/mdx/goTo.mdx
+++ b/src/docs/mdx/goTo.mdx
@@ -9,7 +9,8 @@ import {Playground, PropsTable } from 'docz';
 import Carousel from 'react-elastic-carousel';
 import Item from '../components/SimpleItem';
 
-- You can trigger the `goTo` method via a `ref` to the `Carousel`:  
+# goTo
+#### You can trigger the `goTo` method via a `ref` to the `Carousel`:  
 ```
 this.carousel.goTo(someIndex)
 ```
