--- a/src/docs/mdx/index.mdx
+++ b/src/docs/mdx/index.mdx
@@ -8,6 +8,8 @@ import {Playground, PropsTable } from 'docz';
 import Carousel from 'react-elastic-carousel';
 import Item from '../components/SimpleItem';
 
+# Getting started
+
 ## install
 ```
 npm install react-elastic-carousel
