--- a/src/docs/mdx/initialFirstItem.mdx
+++ b/src/docs/mdx/initialFirstItem.mdx
@@ -9,7 +9,9 @@ import {Playground, PropsTable } from 'docz';
 import Carousel from 'react-elastic-carousel';
 import Item from '../components/SimpleItem';
 
-- Initial first active item
+# initialFirstItem
+
+#### The first active item on mount
 
 <Playground >
     <Carousel initialFirstItem={2}>
