--- a/src/docs/mdx/itemsToScroll.mdx
+++ b/src/docs/mdx/itemsToScroll.mdx
@@ -9,7 +9,8 @@ import {Playground, PropsTable } from 'docz';
 import Carousel from 'react-elastic-carousel';
 import Item from '../components/SimpleItem';
 
-- Number of items to scroll
+# itemsToScroll
+#### Number of items to scroll
 
 <Playground >
     <Carousel itemsToScroll={2} itemsToShow={2}>
