--- a/src/docs/mdx/itemsToShow.mdx
+++ b/src/docs/mdx/itemsToShow.mdx
@@ -9,7 +9,8 @@ import {Playground, PropsTable } from 'docz';
 import Carousel from 'react-elastic-carousel';
 import Item from '../components/SimpleItem';
 
-- Number of visible items
+# itemsToShow
+#### Number of visible items
 
 <Playground >
     <Carousel itemsToShow={2}>
