--- a/src/docs/mdx/onPrevEnd.mdx
+++ b/src/docs/mdx/onPrevEnd.mdx
@@ -9,7 +9,8 @@ import {Playground, PropsTable } from 'docz';
 import Carousel from 'react-elastic-carousel';
 import Item from '../components/SimpleItem';
 
-- `onPrevEnd` will pass the new __current__ `item-object`:  
+# onPrevEnd
+#### `onPrevEnd` will pass the new __current__ `item-object`:  
 ```
 (currentItem) => {/*...*/}
 ```
