--- a/src/docs/mdx/onPrevStart.mdx
+++ b/src/docs/mdx/onPrevStart.mdx
@@ -9,7 +9,8 @@ import {Playground, PropsTable } from 'docz';
 import Carousel from 'react-elastic-carousel';
 import Item from '../components/SimpleItem';
 
-- `onPrevStart` will pass both the __current__ and __next__ `item-object`:  
+# onPrevStart
+#### `onPrevStart` will pass both the __current__ and __next__ `item-object`:  
 ```
 (currentItem, nextItem) => {/*...*/}
 ```
