--- a/src/docs/mdx/onResize.mdx
+++ b/src/docs/mdx/onResize.mdx
@@ -10,8 +10,8 @@ import Carousel from 'react-elastic-carousel';
 import Item from '../components/SimpleItem';
 import breakPoints from '../components/breakPoints';
 
-
-- You can listen to the `onResize` event of the `Carousel`, this will get invoked on each `resize` event of the root element and will return the current `breakPoint` object being used: 
+# onResize
+#### You can listen to the `onResize` event of the `Carousel`, this will get invoked on each `resize` event of the root element and will return the current `breakPoint` object being used: 
 
 ```
 (currentBreakPoint) => {/*...*/}
