--- a/src/docs/mdx/enableAutoPlay.mdx
+++ b/src/docs/mdx/enableAutoPlay.mdx
@@ -9,7 +9,8 @@ import {Playground, PropsTable } from 'docz';
 import Carousel from 'react-elastic-carousel';
 import Item from '../components/SimpleItem';
 
-- Toggle `enableAutoPlay` and set `autoPlaySpeed` as you wish
+# enableAutoPlay
+#### Toggle `enableAutoPlay` and set `autoPlaySpeed` as you wish
 
 <Playground >
     <Carousel enableAutoPlay autoPlaySpeed={1500}>
