--- a/src/docs/mdx/focusOnSelect.mdx
+++ b/src/docs/mdx/focusOnSelect.mdx
@@ -9,7 +9,8 @@ import {Playground, PropsTable } from 'docz';
 import Carousel from 'react-elastic-carousel';
 import Item from '../components/SimpleItem';
 
-- Sliding to an item on click
+# focusOnSelect
+#### Sliding to an item on click
 
 <Playground >
     <Carousel 
