--- a/src/docs/mdx/isRTL.mdx
+++ b/src/docs/mdx/isRTL.mdx
@@ -9,7 +9,8 @@ import {Playground, PropsTable } from 'docz';
 import Carousel from 'react-elastic-carousel';
 import Item from '../components/SimpleItem';
 
-- Support for `right-to-left` layouts
+# isRTL
+#### Support for `right-to-left` layouts
 
 <Playground >
     <Carousel isRTL={true} itemsToShow={3}>
