--- a/src/docs/mdx/itemPosition.mdx
+++ b/src/docs/mdx/itemPosition.mdx
@@ -9,7 +9,9 @@ import {Playground, PropsTable } from 'docz';
 import Carousel, {consts} from 'react-elastic-carousel';
 import Item from '../components/SimpleItem';
 
-- You should import the `consts` object to pass the desired `itemPosition`
+# itemPosition
+#### Sets the position of the item within the item's wrapper.
+_You should import the `consts` object to pass the desired `itemPosition`_
 
 ```
 import Carousel, { consts } from 'react-elastic-carousel';
