--- a/src/docs/mdx/onNextEnd.mdx
+++ b/src/docs/mdx/onNextEnd.mdx
@@ -9,8 +9,8 @@ import {Playground, PropsTable } from 'docz';
 import Carousel from 'react-elastic-carousel';
 import Item from '../components/SimpleItem';
 
-
-- `onNextEnd` will pass the new __current__ `item-object`:  
+# onNextEnd
+#### `onNextEnd` will pass the new __current__ `item-object`:  
 ```
 (currentItem) => {/*...*/}
 ```
