--- a/src/docs/mdx/renderArrow.mdx
+++ b/src/docs/mdx/renderArrow.mdx
@@ -10,6 +10,10 @@ import Carousel, {consts} from 'react-elastic-carousel';
 import Button from '../components/Button';
 import Item from '../components/SimpleItem';
 
+# renderArrow
+
+## Signature 
+
 - You can pass a function that returns a react element,   
   This function is a [render prop](https://reactjs.org/docs/render-props.html) and its signature is:  
 ```
@@ -19,11 +23,15 @@ import Item from '../components/SimpleItem';
 - `type` = `PropTypes.oneOf([consts.PREV, consts.NEXT])`
 - `onClick` Is the hook to the inner `onClick` of the `Carousel`. You can attach it wherever you want within the returned component.
 
-## The `consts` object 
-` You can import the `consts` object like so:
+_You should import the consts object to pass the desired itemPosition_
 ```
 import Carousel, { consts } from 'react-elastic-carousel';
+ // ....
+
+type === consts.PREV
 ```
+
+## Demo
 
 <Playground >
     <Carousel 
