--- a/src/docs/mdx/slideNext.mdx
+++ b/src/docs/mdx/slideNext.mdx
@@ -9,7 +9,8 @@ import {Playground, PropsTable } from 'docz';
 import Carousel from 'react-elastic-carousel';
 import Item from '../components/SimpleItem';
 
-- You can trigger the `slideNext` or `slidePrev` methods via a `ref` to the `Carousel`: 
+# slideNext / slidePrev
+#### You can trigger the `slideNext` or `slidePrev` methods via a `ref` to the `Carousel`: 
 
 ```
 this.carousel.slideNext()
