--- a/src/docs/mdx/renderArrow.mdx
+++ b/src/docs/mdx/renderArrow.mdx
@@ -12,6 +12,8 @@ import Item from '../components/SimpleItem';
 
 # renderArrow
 
+### You can provide custom Arrow buttons.
+
 ## Signature 
 
 - You can pass a function that returns a react element,   
