--- a/src/docs/mdx/renderArrow.mdx
+++ b/src/docs/mdx/renderArrow.mdx
@@ -25,7 +25,7 @@ import Item from '../components/SimpleItem';
 - `type` = `PropTypes.oneOf([consts.PREV, consts.NEXT])`
 - `onClick` Is the hook to the inner `onClick` of the `Carousel`. You can attach it wherever you want within the returned component.
 
-_You should import the consts object to pass the desired itemPosition_
+_You should import the `consts` object to check the arrow direction_
 ```
 import Carousel, { consts } from 'react-elastic-carousel';
  // ....
