resolve #82 + public css classes for items

--- a/src/docs/mdx/index.mdx
+++ b/src/docs/mdx/index.mdx
@@ -10,12 +10,14 @@ import Item from '../components/SimpleItem';
 # Getting started
 
 ## install
-```
+
+```bash
 npm install react-elastic-carousel
 ```
 
 ## Import
-```
+
+```js
 import Carousel from 'react-elastic-carousel'
 ```
 
@@ -35,3 +37,9 @@ import Carousel from 'react-elastic-carousel'
 ## Props
 
 <Props of={Carousel} />
+
+## Styling
+
+Almost every element in `react-elastic-carousel` has a css class with the `rec-` prefix (rec is short React Elastic Carousel). 
+
+For example: `rec-arrow` for both arrow buttons or `rec-arrow-left` just for the left one. [example](/styling)
