upgrade docz + fix typos and added test

--- a/src/docs/mdx/index.mdx
+++ b/src/docs/mdx/index.mdx
@@ -40,6 +40,7 @@ import Carousel from 'react-elastic-carousel'
 
 ## Styling
 
-Almost every element in `react-elastic-carousel` has a css class with the `rec-` prefix (rec is short React Elastic Carousel). 
+Almost every element in `react-elastic-carousel` has a css class with the `rec-` prefix (rec is short React Elastic Carousel).  
+For example: `rec-arrow` for both arrow buttons or `rec-arrow-left` just for the left one. 
 
-For example: `rec-arrow` for both arrow buttons or `rec-arrow-left` just for the left one. [example](/styling)
+You can see a code example [here](/styling).
