--- a/src/docs/mdx/onPrevEnd.mdx
+++ b/src/docs/mdx/onPrevEnd.mdx
@@ -24,7 +24,7 @@ import Item from '../components/SimpleItem';
 
 <Playground >
     <Carousel 
-        initialFirstItem={3}
+        initialActiveIndex={3}
         itemsToShow={2}
         onPrevEnd={(currentItem, pageIndex) => alert(JSON.stringify({currentItem, pageIndex}))}
     >
