Support all props through breakpoints

--- a/src/docs/mdx/breakpoints.mdx
+++ b/src/docs/mdx/breakpoints.mdx
@@ -14,7 +14,7 @@ _This is the coolest feature and one of the main reasons that `react-elastic-car
 The `breakPoints` array, allows you to set different `props` for different sizes of the element, regardless to the window's size.  
 This is due to the fact that `react-elastic-carousel` is listening to the element's `resize` event instead of the window.
 
-#### You can pass an array of objects that will signal `react-elastic-carousel` to change props like `itemsToShow` and `itemsToScroll` on different `width` values.
+#### You can pass an array of objects that will signal `react-elastic-carousel` to change props like `itemsToShow` and `itemsToScroll` (and others) on different `width` values.
 
 ## Example
 (_Drag or use the resize buttons to see the changes..._)
