--- a/src/docs/mdx/onResize.mdx
+++ b/src/docs/mdx/onResize.mdx
@@ -17,7 +17,7 @@ import breakPoints from '../components/breakPoints';
 ```
 
 <Playground >
-    <Carousel breakPoints={breakPoints} onResize={currentBreakPoint => console.log(JSON.stringify(currentBreakPoint))}>
+    <Carousel breakPoints={breakPoints} onResize={currentBreakPoint => console.log(currentBreakPoint)}>
     <Item>1</Item>
     <Item>2</Item>
     <Item>3</Item>
